--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="results"></div>
   <button class="show-more"> Show More </button>
-  
+  <button id="up">up</button>
   <script src="main.js"></script>
 </body>
 </html>
