--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Serach Images </title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>image search app</h1>
-  <p>using unsplash api </p>
-  <div class="serach-container">
-    <input id="search-input" type="text" placeholder="search">
-    <button id="search-button"> Search</button>
-    <button id="delete-button">Delete All</button>
-  </div>
-  <div class="results"></div>
-  <button class="show-more"> Show More </button>
-  <button id="up">up</button>
-  <script src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Serach Images</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>image search app</h1>
+      <p>using unsplash api</p>
+      <div class="serach-container">
+        <input id="search-input" type="text" placeholder="search" />
+        <button id="search-button">Search</button>
+        <button id="delete-button">Delete All</button>
+      </div>
+      <div class="results"></div>
+      <button class="show-more">Show More</button>
+      <button id="up">up</button>
+    </div>
+    <script src="main.js"></script>
+  </body>
 </html>
